--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -1,6 +1,6 @@
 "$schema" = "https://yazi-rs.github.io/schemas/keymap.json"
 
-[manager]
+[mgr]
 prepend_keymap = [
   # Plugins
   { on = ["l"], run = "plugin smart-enter", desc = "Enter the child directory, or open the file" },
