--- a/server/.tmux.conf
+++ b/server/.tmux.conf
@@ -77,4 +77,5 @@ bind -n M-j resize-pane -D 5
 bind -n M-k resize-pane -U 5
 bind -n M-l resize-pane -R 5
 bind -r m resize-pane -Z
-bind -r x kill-paneind -r C-l select-window -t :+
+bind -r x kill-pane
+bind -r C-l select-window -t :+
