[#misc] update local configs

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -180,10 +180,9 @@ set -g @continuum-restore 'off'
 # set -g @kanagawa-ignore-window-colors true
 
 # tokyo-night plugins
-set -g @tokyo-night-tmux_theme "storm"
+set -g @tokyo-night-tmux_theme "storm" # default: night
 set -g @tokyo-night-tmux_transparent 0
 set -g @tokyo-night-tmux_window_tidy_icons 1
-set -g @tokyo-night-tmux_path_format relative
 set -g @tokyo-night-tmux_window_id_style dsquare
 set -g @tokyo-night-tmux_pane_id_style hide
 set -g @tokyo-night-tmux_zoom_id_style none
@@ -195,5 +194,6 @@ set -g @tokyo-night-tmux_show_wbg 1
 set -g @tokyo-night-tmux_show_hostname 0
 set -g @tokyo-night-tmux_show_battery_widget 0
 set -g @tokyo-night-tmux_show_path 0
+set -g @tokyo-night-tmux_path_format relative
 
 run '~/.tmux/plugins/tpm/tpm'
