--- a/ghostty/config
+++ b/ghostty/config
@@ -7,13 +7,17 @@ font-feature = +liga
 theme = "catppuccin-mocha.conf"
 background-opacity = 0.85
 background-blur = 20
-window-padding-x = 8
+window-padding-x = 10,0
 window-padding-y = 0
 window-padding-balance = true
 window-padding-color = background
 window-decoration = auto
 window-height = 32
 window-width = 100
+adjust-cell-width = 0%
+adjust-cell-height = 0%
+# title = "Ghostty"
+# window-subtitle = working-directory
 
 # macOS specific
 macos-titlebar-style = transparent
@@ -23,6 +27,7 @@ quit-after-last-window-closed = true
 
 # cursor
 cursor-style = block
+cursor-style-blink = false
 mouse-hide-while-typing = true
 
 # quick terminal
@@ -39,6 +44,7 @@ auto-update-channel = stable
 title-report = false
 clipboard-write = allow
 copy-on-select = clipboard
+shell-integration-features = no-cursor,sudo,no-title
 
 # keybinds
 # splits
